# house_price_prediction

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  app.py
src/data/: load_data.py
src/features/: build_features.py
src/models/: train_model.py
src/utils/:  helpers.py
